--- a/src/main/resources/templates/maps/main.html
+++ b/src/main/resources/templates/maps/main.html
@@ -8,18 +8,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum=1.0, user-scalable=no">
 	<title>iHealMe</title>
 	<link rel="stylesheet" type="text/css" href="/css/maps/search.css">
-	<th:block layout:fragment="css">
 	
+	<th:block layout:fragment="css">
 	</th:block>
 	<th:block layout:fragment="js">
-	
 	</th:block>
 </head>
 <body>
 	<div layout:fragment="content">
-		<form action="${kakao}" method="GET">
+		<form th:action="@{/api/places}" method="GET">
 			<input type="text" id="search" name="search" placeholder="ex) 강남 소아과">
-			<button type="submit" id="button" th:href="@{/maps/searchList}" onclick="location.href='/api/places'">검색</button>
+			<button type="submit">검색</button>
 		</form>
 		
 		<script type="text/javascript">
