--- a/src/main/resources/static/css/maps/searchList.css
+++ b/src/main/resources/static/css/maps/searchList.css
@@ -1,3 +1,11 @@
+/*
+전체 선택자 : *{내용;} -> 모든 태그 선택
+태그 선택자 : 태그{내용;} -> 지정한 태그 선택
+id 선택자 : #아이디{내용;} -> 특정 id 태그 선택(중복없이)
+class 선택자 : .클래그{내용;} -> 특정 class 태그 선택(다중 선택)
+속성 선택자 : 선택자[속성 = 값] -> 특정 속성 또는 속성값 태그 선
+ */
+
 nav {
     width: 100%;
     height: 57px;
@@ -46,4 +54,16 @@ th {
     background-color: #deebf7;
     font-weight: bold;
     text-align: center;
+}
+
+#reservation, #map {
+    padding: 2px;
+    font-size: 20px;
+    background-color: #ddd;
+    border: 1px solid wheat;
+}
+
+#placeName {
+    text-align: center;
+    font-size: 25px;
 }
