--- a/src/main/resources/templates/maps/reservation.html
+++ b/src/main/resources/templates/maps/reservation.html
@@ -12,30 +12,42 @@
 <body>
 	<div layout:fragment="content">
 		<div class="container">
-			<table>
-				<thead>
-				<tr>
-					<th>예약하기</th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td>환아명 : <input type="text" id="search" name="search" placeholder="ex) xxx"></td>
-				</tr>
-				<tr>
-					<td>진료명 :
-						<select size="1">
-							<option value="#" selected="selected">소아진료</option>
-							<option value="#">영유아검진</option>
-							<option value="#">예방접종</option>
-						</select>
-					</td>
-				</tr>
-				<tr>
-					<td><button type="button" id="button" style="margin-left: 100px">접수 신청</button></td>
-				</tr>
-				</tbody>
-			</table>
+			<hr>
+			<div id="a">
+				<div id="left">
+					<ul>
+						<li>주소명 : <p th:text="${place.roadAddressName}">Road Address Nam</p></li>
+						<li>전화번호 : <p th:text="${place.phone}">Phone</p></li>
+						<li>홈페이지 : <p th:text="${place.placeUrl}">Place URL</p></li>
+					</ul>
+				</div>
+				<div id="right">
+					<table>
+						<thead>
+						<tr>
+							<th>예약하기</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>환아명 : <input type="text" id="search" name="search" placeholder="ex) xxx"></td>
+						</tr>
+						<tr>
+							<td>진료명 :
+								<select size="1">
+									<option value="#" selected="selected">소아진료</option>
+									<option value="#">영유아검진</option>
+									<option value="#">예방접종</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<td><button type="button" id="button" style="margin-left: 100px">접수 신청</button></td>
+						</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
