--- a/src/main/resources/templates/users/signuphospital.html
+++ b/src/main/resources/templates/users/signuphospital.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>i : Heal Me</title>
@@ -215,7 +216,7 @@
             </div>
 
             <div class="buttons">
-                <button type="submit" class="btn btn-secondary btn-lg">회원가입</button>
+                <button type="button" class="btn btn-secondary btn-lg register" th:onclick="hospitalSave()">회원가입</button>
             </div>
         </form>
     </div>
@@ -233,10 +234,10 @@
                 confirmPassword: $("#confirmPassword").val(),
                 question: $("#question").val(),
                 answer: $("#answer").val(),
-                answer: $("#businessNum").val(),
-                answer: $("#hptName").val(),
-                answer: $("#hptAddress").val(),
-                answer: $("#hptPhoneNum").val()
+                businessNum: $("#businessNum").val(),
+                hptName: $("#hptName").val(),
+                hptAddress: $("#hptAddress").val(),
+                hptPhoneNum: $("#hptPhoneNum").val()
             };
 
             $.ajax({
