--- a/src/main/resources/templates/maps/reservation.html
+++ b/src/main/resources/templates/maps/reservation.html
@@ -30,7 +30,7 @@
 						</thead>
 						<tbody>
 						<tr>
-							<td>환아명 : <input type="text" id="search" name="search" placeholder="ex) xxx"></td>
+							<td>환아명 : <input type="text" id="search" name="search" placeholder="ex) xxx" required></td>
 						</tr>
 						<tr>
 							<td>진료명 :
@@ -42,7 +42,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td><button type="button" id="button" style="margin-left: 100px">접수 신청</button></td>
+							<td><button type="submit" id="button" style="margin-left: 100px">접수 신청</button></td>
 						</tr>
 						</tbody>
 					</table>
