--- a/src/main/resources/templates/users/signuphospital.html
+++ b/src/main/resources/templates/users/signuphospital.html
@@ -158,9 +158,16 @@
                 <div class="col">
                     <select class="form-control" name="question" id="question">
                         <option value="" disabled selected>여기를 클릭하세요.</option>
-                        <option value="1">질문1</option>
-                        <option value="2">질문2</option>
-                        <option value="3">질문3</option>
+                        <option value="1">1. 기억에 남는 추억의 장소는?</option>
+                        <option value="2">2. 자신의 인생 좌우명은?</option>
+                        <option value="3">3. 자신의 보물 제1호는?</option>
+                        <option value="4">4. 가장 기억에 남는 선생님 성함은?</option>
+                        <option value="5">5. 타인이 모르는 자신만의 신체비밀이 있다면?</option>
+                        <option value="6">6. 추억하고 싶은 날짜가 있다면?</option>
+                        <option value="7">7. 받았던 선물 중 기억에 남는 독특한 선물은?</option>
+                        <option value="8">8. 유년시절 가장 생각나는 친구 이름은?</option>
+                        <option value="9">9. 내가 좋아하는 캐릭터는?</option>
+                        <option value="10">10. 인상 깊게 읽은 책 이름은?</option>
                     </select>
                 </div>
             </div>
