--- a/src/main/resources/templates/community/post.html
+++ b/src/main/resources/templates/community/post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
@@ -65,7 +66,9 @@
             <div class="comment">
                 <h4 class="comment-title">댓글<span class="comment-count" th:text="|(${postRes.commentCount})|"></span>
                 </h4>
-                <button class="btn btn-secondary btn-sm addComment">댓글 쓰기</button>
+                <span sec:authorize="isAuthenticated()">
+                    <button class="btn btn-secondary btn-sm addComment">댓글 쓰기</button>
+                </span>
                 <hr>
                 <div class="commentList">
 
