--- a/src/main/resources/static/css/maps/searchList.css
+++ b/src/main/resources/static/css/maps/searchList.css
@@ -30,6 +30,8 @@ body {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    overflow-y: scroll; /* 스크롤바가 생성됩니다. */
+    max-height: 800px; /* 스크롤이 가능한 최대 높이입니다. */
 }
 h1 {
     font-size: 24px;
@@ -42,28 +44,60 @@ table {
     background-color: white;
     margin-bottom: 20px;
 }
-td {
-    padding: 10px;
-    border: 1px solid #ddd;
-    text-align: center;
-}
 th {
-    padding: 10px;
+    padding: 5px;
     border-block: 1px solid skyblue;
     writing-mode: horizontal-tb;
     background-color: #deebf7;
     font-weight: bold;
     text-align: center;
 }
+td {
+    padding: 5px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
 
-#reservation, #map {
-    padding: 2px;
+.reservation, .maps {
+    color: black;
+    border: #ddd;
+    padding: 3px;
     font-size: 20px;
-    background-color: #ddd;
-    border: 1px solid wheat;
+    background: skyblue;
 }
 
 #placeName {
     text-align: center;
     font-size: 25px;
+}
+
+/* 모달창 스타일 */
+.modal {
+    display: none; /* 모달창 숨김 */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 배경 어둡게 */
+    z-index: 9999; /* 모달창이 가장 위에 오도록 z-index 설정 */
+}
+
+.modal-content {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    width: 500px;
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+#confirmBtn, #cancelBtn {
+    float: left;
 }
