--- a/src/main/resources/templates/maps/main.html
+++ b/src/main/resources/templates/maps/main.html
@@ -18,14 +18,18 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<form th:action="@{/api/places}" method="GET">
-			<input type="text" id="search" name="search" placeholder="ex) 강남 소아과">
-			<button type="submit">검색</button>
-		</form>
-		
-		<script type="text/javascript">
-		
-		</script>
+		<div class="container">
+			<div class="a">
+				<h1>아이가 아프다면<br>
+					아이힐미를 찾아주세요.</h1>
+			</div>
+			<article>
+				<form th:action="@{/places}" method="GET">
+					<input type="text" id="search" name="search" placeholder="ex) 강남 소아과">
+					<button type="submit"><img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png"></button>
+				</form>
+			</article>
+		</div>
 	</div>
 </body>
 </html>
