--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -26,8 +26,8 @@
                 <tbody>
                 <tr th:each="reservationInfo : ${result.userResList}">
                     <td th:text="${reservationInfo.resNo}"></td>
-                    <td th:text="${reservationInfo.name}"></td>
-                    <td th:text="${reservationInfo.list}"></td>
+                    <td th:text="${reservationInfo.patientName}"></td>
+                    <td th:text="${reservationInfo.txList}"></td>
 
                     <td th:if="${reservationInfo.currentStatus == '접수대기'}"
                         th:text="${#temporals.format(reservationInfo.regdate, 'yyyy-MM-dd HH:mm:ss')}"></td>
@@ -37,7 +37,7 @@
                     <td>
                         <a th:if="${reservationInfo.currentStatus == '진료 전'}" th:href="@{/userResCancelUpdate(resNo=${reservationInfo.resNo})}" onclick="return cancelReservation()">취소하기</a>
                         <a th:if="${reservationInfo.currentStatus == '진료완료'}"
-                           th:href="@{/community/write(resNo=${reservationInfo.resNo}, name=${reservationInfo.name})}">후기작성</a>
+                           th:href="@{/community/write(resNo=${reservationInfo.resNo}, name=${reservationInfo.patientName})}">후기작성</a>
                     </td>
 
                 </tr>
