--- a/src/main/resources/templates/HptReception/HptReceptionList.html
+++ b/src/main/resources/templates/HptReception/HptReceptionList.html
@@ -35,20 +35,20 @@
             <tbody>
             <tr th:each="hptReception : ${result.hptRecList}">
                 <td th:text="${hptReception.resNo}"></td>
-                <td th:text="${hptReception.pName}"></td>
-                <td th:text="${hptReception.txList}"></td>
-                <td th:text="${#temporals.format(hptReception.rDate, 'yy/MM/dd HH:mm:ss')}"></td>
-                <td th:text="${hptReception.currentStatus}"></td>
+                <td th:text="${hptReception.userReservation.patientName}"></td>
+                <td th:text="${hptReception.userReservation.txList}"></td>
+                <td th:text="${#temporals.format(hptReception.userReservation.regdate, 'yy/MM/dd HH:mm:ss')}"></td>
+                <td th:text="${hptReception.userReservation.currentStatus}"></td>
                 <td>
-                    <a th:if="${hptReception.currentStatus == '접수대기'}"
+                    <a th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
                        th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToAccept(resNo=${hptReception.resNo})}"
                        onclick="return acceptReception()">접수</a>
 
-                    <a th:if="${hptReception.currentStatus == '접수대기'}"
+                    <a th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
                        th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToReject(resNo=${hptReception.resNo})}"
                        onclick="return rejectReception()">거절</a>
 
-                    <a th:if="${hptReception.currentStatus == '진료 전'}"
+                    <a th:if="${hptReception.userReservation.currentStatus == '진료 전'}"
                        th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToComplete(resNo=${hptReception.resNo})}"
                        onclick="return completeTreatment()">진료완료</a>
                 </td>
