업데이트 된 접수일시 날짜 값이 뷰에 제대로 출력이 안되는 현상 수정

--- a/src/main/resources/templates/HptReception/HptReceptionList.html
+++ b/src/main/resources/templates/HptReception/HptReceptionList.html
@@ -37,7 +37,12 @@
                 <td th:text="${hptReception.recNo}"></td>
                 <td th:text="${hptReception.userReservation.patientName}"></td>
                 <td th:text="${hptReception.userReservation.txList}"></td>
-                <td th:text="${#temporals.format(hptReception.userReservation.regDate, 'yy/MM/dd HH:mm:ss')}"></td>
+
+                <td th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
+                    th:text="${#temporals.format(hptReception.regDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                <td th:if="${hptReception.userReservation.currentStatus != '접수대기'}"
+                    th:text="${#temporals.format(hptReception.userReservation.updateRegDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+
                 <td th:text="${hptReception.userReservation.currentStatus}"></td>
                 <td>
                     <a th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
