--- a/src/main/resources/static/css/reservationStyle.css
+++ b/src/main/resources/static/css/reservationStyle.css
@@ -77,3 +77,10 @@ form {
 .btn-secondary:hover {
 	background-color: steelblue;
 }
+
+.btn-outline {
+	background-color: transparent;
+	border: none;
+	padding: 0;
+	color: blue;
+}
