--- a/src/main/resources/templates/reservation/userReservation.html
+++ b/src/main/resources/templates/reservation/userReservation.html
@@ -35,7 +35,13 @@
                         th:text="${#temporals.format(reservationInfo.updateRegDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td th:text="${reservationInfo.currentStatus}"></td>
                     <td>
-                        <a th:if="${reservationInfo.currentStatus == '진료 전'}" th:href="@{/userResCancelUpdate(resNo=${reservationInfo.resNo})}" onclick="return cancelReservation()">취소하기</a>
+                        <form th:if="${reservationInfo.currentStatus == '진료 전'}" th:action="@{/userResCancelUpdate(resNo=${reservationInfo.resNo})}" method="post">
+                            <input type="hidden" name="patientName" th:value="${reservationInfo.patientName}">
+                            <input type="hidden" name="txList" th:value="${reservationInfo.txList}">
+                            <input type="hidden" name="currentStatus" th:value="${reservationInfo.currentStatus}">
+                            <button type="submit" class="btn-outline" onclick="return cancelReservation()">취소하기</button>
+                        </form>
+
                         <a th:if="${reservationInfo.currentStatus == '진료완료'}"
                            th:href="@{/community/write(resNo=${reservationInfo.resNo}, name=${reservationInfo.patientName})}">후기작성</a>
                     </td>
