병원 접수 뷰 코드 수정

--- a/src/main/resources/static/css/HptReception/HptReception.css
+++ b/src/main/resources/static/css/HptReception/HptReception.css
@@ -102,3 +102,10 @@ form {
 .btn-secondary:hover {
     background-color: steelblue;
 }
+
+.btn-outline {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  color: blue;
+}
