--- a/src/main/resources/templates/HptReception/HptReceptionList.html
+++ b/src/main/resources/templates/HptReception/HptReceptionList.html
@@ -45,17 +45,26 @@
 
                 <td th:text="${hptReception.userReservation.currentStatus}"></td>
                 <td>
-                    <a th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
-                       th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToAccept(recNo=${hptReception.recNo})}"
-                       onclick="return acceptReception()">접수</a>
+                    <form th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
+                          th:action="@{/HptReception/HptReceptionList/updateCurrentStatus(recNo=${hptReception.recNo})}"
+                          method="post">
+                        <input type="hidden" name="currentStatus" th:value="접수">
+                        <button type="submit" class="btn-outline" onclick="return acceptReception()">접수</button>
+                    </form>
 
-                    <a th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
-                       th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToReject(recNo=${hptReception.recNo})}"
-                       onclick="return rejectReception()">거절</a>
+                    <form th:if="${hptReception.userReservation.currentStatus == '접수대기'}"
+                          th:action="@{/HptReception/HptReceptionList/updateCurrentStatus(recNo=${hptReception.recNo})}"
+                          method="post">
+                        <input type="hidden" name="currentStatus" th:value="거절">
+                        <button type="submit" class="btn-outline" onclick="return acceptReception()">거절</button>
+                    </form>
 
-                    <a th:if="${hptReception.userReservation.currentStatus == '진료 전'}"
-                       th:href="@{/HptReception/HptReceptionList/updateCurrentStatusToComplete(recNo=${hptReception.recNo})}"
-                       onclick="return completeTreatment()">진료완료</a>
+                    <form th:if="${hptReception.userReservation.currentStatus == '진료 전'}"
+                                 th:action="@{/HptReception/HptReceptionList/updateCurrentStatus(recNo=${hptReception.recNo})}"
+                                 method="post">
+                    <input type="hidden" name="currentStatus" th:value="${hptReception.userReservation.currentStatus}">
+                    <button type="submit" class="btn-outline" onclick="return acceptReception()">진료완료</button>
+                </form>
                 </td>
             </tr>
             </tbody>
